lab503/helloingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app: hello 
  name: helloingress 
spec:
  ingressClassName: entry-ingress-class 
  rules:
  - http:
      paths:
      - backend:
          service:
            name: helloservice 
            port:
              number: 5859 
        path: /testuser8-hello(/|$)(.*)
        pathType: ImplementationSpecific
